--- a/dragonsstyling.css
+++ b/dragonsstyling.css
@@ -1,5 +1,5 @@
 nav ul{
-    position: inherit
+    position: inherit;
     top: 10;
     left: 10;
     width: 120%;
@@ -7,4 +7,5 @@ nav ul{
     margin: 0;
     padding: 0;
     text-align: center;
+    color: rgb(255, 30, 30);
 }
